--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
-    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.5",
@@ -39,6 +38,8 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^7.1.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -49,14 +50,14 @@
     "react-number-format": "^5.1.4",
     "react-popper": "^2.3.0",
     "react-portal": "^4.2.2",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^3.0.1",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.2",
-    "react-simple-maps": "^1.0.0",
+    "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tabs": "^6.0.2",
     "react-tooltip": "^5.11.1",
     "redux-persist": "^6.0.0",
     "twin.macro": "^3.3.0",
@@ -80,9 +81,9 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -92,15 +93,15 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "postcss-nesting": "^11.2.1",
     "prettier": "^2.8.6",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.3",
-    "vite": "^4.3.3",
+    "vite": "^4.4.10",
     "vite-plugin-dynamic-import": "^1.3.4"
   }
 }
