--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-popper": "^2.3.0",
     "react-portal": "^4.2.2",
     "react-quill": "^2.0.0",
+    "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
